frontend/test/should_fail/exectype_InSetmap4.grg
using exectype;

rule r
{
	modify  {
		exec(u:map<string,AA> =map<string,AA> && v:double=varia && {v in u});
	}
}